--- a/angular.json
+++ b/angular.json
@@ -89,10 +89,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "ang-laskin:build:production"
+              "buildTarget": "ang-laskin:build:production"
             },
             "development": {
-              "browserTarget": "ang-laskin:build:development"
+              "buildTarget": "ang-laskin:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -100,7 +100,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "ang-laskin:build"
+            "buildTarget": "ang-laskin:build"
           }
         }
       }
